[gd_scene load_steps=22 format=3 uid="uid://b8kkkyihybjsj"]

[ext_resource type="Script" path="res://player/player.gd" id="1_n4vna"]
[ext_resource type="Texture2D" uid="uid://0x5igftjrf4x" path="res://art/SpriteSheet.png" id="1_nfqv3"]
[ext_resource type="Script" path="res://player/buff.gd" id="3_31cge"]
[ext_resource type="Texture2D" uid="uid://bqwm5a6u2vwa2" path="res://art/建造.png" id="4_c4j7u"]
[ext_resource type="Texture2D" uid="uid://cba548ooihjni" path="res://art/攻擊.png" id="4_ggsow"]
[ext_resource type="Script" path="res://player/HUD.gd" id="4_gwmm1"]
[ext_resource type="Texture2D" uid="uid://bjcilakpnyv02" path="res://art/joystick.png" id="4_twmut"]
[ext_resource type="Texture2D" uid="uid://dgyeaf0w5u8wl" path="res://art/移動桿.png" id="5_kmxrf"]
[ext_resource type="PackedScene" uid="uid://bcgndkkx34l1w" path="res://Menu/menu.tscn" id="8_dpdkg"]
[ext_resource type="Texture2D" uid="uid://cktm45pf8xyqd" path="res://art/設定.png" id="9_k7qym"]

[sub_resource type="Shader" id="Shader_lfivs"]
code = "shader_type canvas_item;

void fragment() {
	// Place fragment code here.
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rjyn4"]
shader = SubResource("Shader_lfivs")

[sub_resource type="Animation" id="Animation_g7hn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_wonhm"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_1rl5s"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_nfsny"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_x3utq"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qw8u"]
_data = {
"RESET": SubResource("Animation_g7hn4"),
"walk_down": SubResource("Animation_wonhm"),
"walk_left": SubResource("Animation_1rl5s"),
"walk_right": SubResource("Animation_nfsny"),
"walk_up": SubResource("Animation_x3utq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3dpv"]
size = Vector2(15, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_eafo0"]
radius = 116.501

[sub_resource type="CircleShape2D" id="CircleShape2D_v2mvb"]
radius = 60.0

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
texture_filter = 1
collision_layer = 3
collision_mask = 3
script = ExtResource("1_n4vna")
speed = 200

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_rjyn4")
texture = ExtResource("1_nfqv3")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1qw8u")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_o3dpv")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="buff" type="Node2D" parent="."]
script = ExtResource("3_31cge")

[node name="bigger_Timer" type="Timer" parent="buff"]
process_callback = 0

[node name="auto_attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="auto_attack"]
position = Vector2(0.5, -7.5)
shape = SubResource("CircleShape2D_eafo0")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Reload" type="Timer" parent="."]
wait_time = 0.3

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_gwmm1")

[node name="Attack_button" type="Button" parent="HUD"]
offset_left = 200.0
offset_top = 85.0
offset_right = 288.0
offset_bottom = 174.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
icon = ExtResource("4_ggsow")
flat = true

[node name="Build_button" type="Button" parent="HUD"]
offset_left = 160.0
offset_top = 85.0
offset_right = 248.0
offset_bottom = 174.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
icon = ExtResource("4_c4j7u")
flat = true

[node name="Joystick" type="Sprite2D" parent="HUD"]
position = Vector2(45, 95)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_twmut")

[node name="Touch_area" type="TouchScreenButton" parent="HUD/Joystick"]
shape = SubResource("CircleShape2D_v2mvb")

[node name="Joystick_mark" type="Sprite2D" parent="HUD"]
position = Vector2(45, 95)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_kmxrf")

[node name="Menu_button" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 45.0
grow_horizontal = 0
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(35, 5)
focus_mode = 0
icon = ExtResource("9_k7qym")
flat = true

[node name="Menu" parent="HUD" instance=ExtResource("8_dpdkg")]
visible = false

[connection signal="timeout" from="buff/bigger_Timer" to="." method="_on_bigger_timer_timeout"]
[connection signal="timeout" from="buff/bigger_Timer" to="buff" method="_on_bigger_timer_timeout"]
[connection signal="body_entered" from="auto_attack" to="." method="_on_auto_attack_body_entered"]
[connection signal="body_exited" from="auto_attack" to="." method="_on_auto_attack_body_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
[connection signal="back_to_game" from="HUD" to="." method="_on_hud_back_to_game"]
[connection signal="pause" from="HUD" to="." method="_on_hud_pause"]
[connection signal="pressed" from="HUD/Menu_button" to="HUD" method="_on_menu_nutton_pressed"]
[connection signal="button_move" from="HUD/Menu" to="HUD" method="_on_menu_button_move"]
[connection signal="close_menu" from="HUD/Menu" to="HUD" method="_on_menu_close_menu"]
